# RPEOrganelle_Segmenter

./: .gitignore  License.txt  README.md  conda-environment.yml  environment.yml  examplesegmentation.py  examplesegmentation_actin.py  examplesegmentation_gfp.py  gfpsegment.py  segment_actindna.py  setup.cfg
gfpseg/hitl/: ROI_compare.py  Readme.md  background_correction.py  filament_structures.py  gfpsegment_singlefolder.py  hitl_generation.py  postprocessing_params.py  spotlike_structures.py
gfpseg/imageJ_macros/: Overlay_segmentation_batchmacro.ijm
gfpseg/segmentation/: notes.txt  segment_GFP.py  utils.py
gfpseg/stackio/: Channel.py  labelledcsvhandler.py  metadataHandler.py  stack3d.py  types.py
src/: examplesegmentation.py
src/RPE_Mask_RCNN/: README.md  _rpesegm.cp36-win_amd64.pyd  build_swig.bat  build_swig.sh  changelog.txt  csv_to_ids.py  generate_meta.py  predict.py  predictors.py  rpefs.py  rpesegm.py  train.py
src/RPE_Mask_RCNN_Apr22/: _rpeutil.cp36-win_amd64.pyd  compare_predictions.py  conda-environment.yml  predict.py  predictors.py  requirements.txt  rpecontour.py
src/RPE_Mask_RCNN_Feb22/: README.md  __main__.py  _rpesegm.cp36-win_amd64.pyd  _rpesegm.cp37-win_amd64.pyd  _rpeutil.cp36-win_amd64.pyd  _rpeutil.cp37-win_amd64.pyd  compare_predictions.py  predict.py  predictors.py  rpecontour.py  rpefs.py  train.py  util.py
src/RPE_Mask_RCNN_Jan22/: Dockerfile  README.md  _rpesegm.cp36-win_amd64.pyd  _rpesegm.cp37-win_amd64.pyd  _rpeutil.cp36-win_amd64.pyd  _rpeutil.cp37-win_amd64.pyd  conda-environment.yml  generate_meta.py  predict_old.py  (+8 more)
(+74 files in other folders)
