[metadata]
name = RPEOrganelle_Segmenter
version = 0.9.1
author = Pushkar Sathe
author_email = pushkar.sathe@nih.gov
description = For handling confocal stacks; generating and improving segmentations based on human feedback. Metadata handling and generation
long_description = file: README.md#, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/markdown
url = ####
project_urls =
    Bug
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gfpseg
packages = find:
python_requres = >=3.7
include_package_data = True

[options.packages.find]
where = gfpseg

#